# pokefinder

./: .gitignore  Dockerfile.frontend  README.md  config.py  justfile  pyproject.toml  pyrightconfig.json  requirements.txt
backend/: app.py  config.py
backend/candidate_finder/: controllers.py  deps.py  exceptions.py  repository.py  schemas.py  services.py
backend/data/fixtures/pokerogue/: pokemon.json  pokemon_stats.json  pokemon_type.json  stat_spreads.json  tm.json  type_matchups.json
backend/data/fixtures/unbound/: move.json  type.json
backend/data/migrations/: env.py
backend/data/migrations/versions/: 75c8485d26bb_initial_schema.py  92a2275283d8_initial_schema.py  d89f8be11a73_initial_schema.py  ec1669b28087_initial_schema.py
backend/data/models/: pokemon.py  pokemon_move.py  pokemon_stats.py  pokemon_type.py  stat_spread.py  tm.py  type.py  type_matchup.py  universal_uuid.py
backend/db/migrations/: 001_initial_schema.sql
backend/db/migrations/versions/: 001_initial_migration.py
backend/db/models/: move.py  pokemon.py  pokemon_move.py  pokemon_stats.py  pokemon_type.py  stat_spread.py  type.py  type_matchup.py
backend/lib/db/: models.py
backend/src/: app.py
backend/src/config/: database.py  settings.py
backend/src/lib/: exceptions.py  repository.py
backend/src/modules/candidate_finder/: controllers.py  deps.py  schemas.py  services.py  urls.py
frontend/: app.py  main.tcss
frontend/libs/: feature_flags.py  main.tcss  models.py
frontend/widgets/candidate_finder/: results.py  search.py
frontend/widgets/coverage_analyzer/: results.py  search.py
frontend/widgets/pokedex/: results.py  search.py
tests/: conftest.py  mock_repository.py
tests/integration/: test_json_repository.py  test_sqlite_repository.py
tests/unit/: conftest.py  mock_repository.py  test_api.py  test_candidate_finder.py  test_candidate_finder_postgres.py
